tests/data/pml/parse_test_7.err
parse error on line 11: return statement outside of  a function

